# jufu

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release-plz.toml
.github/workflows/: ci.yml  dist.yml  release-plz.yml  release-pr-automerge.yml  release-smoke.yml  release.yml
src/: app.rs  jj.rs  main.rs  model.rs  ui.rs
