[package]
name = "jufu"
version = "0.1.0"
edition = "2024"

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
unicode-width = "0.2.2"
